syntax = "proto3";

package datum.iam.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/field_info.proto";
import "google/api/resource.proto";
import "google/protobuf/timestamp.proto";
import "google/type/phone_number.proto";

option go_package = "go.datumapis.com/os/genproto/iam/v1alpha;iampb";

// User is a resource representing a User.
message User {
  option (google.api.resource) = {
    type: "iam.datumapis.com/User"
    pattern: "users/{user}"
    style: DECLARATIVE_FRIENDLY
    singular: "user"
    plural: "users"
  };

  // The resource name of this User.
  string name = 1 [
    (google.api.field_behavior) = IDENTIFIER,
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The resource ID of this User within its parent resource.
  string user_id = 12 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Server assigned unique identifier for the User. The value
  // is a UUID4 string and guaranteed to remain unchanged until the resource is
  // deleted.
  string uid = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.field_info).format = UUID4
  ];

  // Human-readable display name of this User that you can modify.
  // The maximum length is 63 characters.
  string display_name = 3 [(google.api.field_behavior) = OPTIONAL];

  // Annotations is an unstructured key-value map stored with a User that
  // may be set by external tools to store and retrieve arbitrary metadata.
  // They are not queryable and should be preserved when modifying objects.
  map<string, string> annotations = 4 [(google.api.field_behavior) = OPTIONAL];

  // Labels is an unstructured key-value map stored with a User that
  // may be set by external tools to enable platform features which identify
  // Users via label selections.
  map<string, string> labels = 5 [(google.api.field_behavior) = OPTIONAL];

  // The specification of the user.
  UserSpec spec = 6 [(google.api.field_behavior) = REQUIRED];

  // Output only. The time when the User is created.
  google.protobuf.Timestamp create_time = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The last time that the User is updated.
  google.protobuf.Timestamp update_time = 8 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. For a deleted resource, the deletion time. It is only
  // populated as a response to a Delete request.
  google.protobuf.Timestamp delete_time = 9 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. If set, there are currently changes in flight to the User.
  bool reconciling = 10 [(google.api.field_behavior) = OUTPUT_ONLY];

  // This checksum is computed by the server based on the value of
  // other fields, and might be sent on update requests to ensure the client has
  // an up-to-date value before proceeding.
  string etag = 11 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// UserSpec is the specification of a User.
message UserSpec {
  // The email of the user.
  string email = 1 [(google.api.field_behavior) = REQUIRED];
  // The first name of the user.
  string given_name = 2 [(google.api.field_behavior) = OPTIONAL];
  // The last name of the user.
  string family_name = 3 [(google.api.field_behavior) = OPTIONAL];
}
